[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlserver = { path = "../mlserver" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
clap = { version = "3.1", features = ["derive"] }
actix-web = "4.0"
actix-files = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
env_logger = "0.9"
shlex = "1.1"
tonic = "0.6"
rand = "0.8"

[[bin]]
name = "launch-server"
path = "src/launch_servers.rs"

name = "launch-worker-1"
path = "src/launch_worker_1.rs"

[[bin]]
name = "launch-worker-2"
path = "src/launch_worker_2.rs"

[[bin]]
name = "run-initializer"
path = "src/run_initializer.rs"

[[bin]]
name = "launch-keeper"
path = "src/launch_keeper.rs"
